// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`duplicate_bindings.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A{}   class A{}

=====================================output=====================================
class A {}
class A {}

================================================================================
`;

exports[`duplicate_bindings.js format[acorn] 1`] = `
"Identifier 'A' has already been declared (1:19)
> 1 | class A{}   class A{}
    |                   ^
  2 |
Cause: Identifier 'A' has already been declared (1:18)"
`;

exports[`duplicate_bindings.js format[espree] 1`] = `
"Identifier 'A' has already been declared (1:19)
> 1 | class A{}   class A{}
    |                   ^
  2 |
Cause: Identifier 'A' has already been declared"
`;
